# hockey-app

./: .env.development  .env.example  .env.production  .env.production.example  .env.testing  .gitattributes  .gitignore  .railwayignore  Dockerfile.backend  Makefile  README.md  app.py  codecov.yml  config.py  create_tables.py  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  enhanced_onboarding_server.py  enhanced_server.py  fix_players_columns.py  init-db.sql  load_env.py  netlify.toml  prd-hockey-pickup-manager.md  pyproject.toml  railway.json  requirements.txt  run_dev.py  simple_server.py  tasks-prd-hockey-pickup-manager.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  deploy.yml  release.yml
config/: __init__.py  base.py  development.py  production.py  testing.py
frontend/: .env.development  .env.production  .eslintrc.js  .gitignore  Dockerfile.frontend  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/public/locales/: en.json  fr.json
frontend/src/: App.css  App.tsx  i18n.ts  index.css  index.tsx
frontend/src/components/Admin/: AdminDashboard.css  AdminDashboard.tsx  InviteManagerForm.tsx
frontend/src/components/Assignments/: AssignmentManager.tsx
frontend/src/components/Auth/: AcceptInvitation.css  AcceptInvitation.tsx  Login.tsx  ProtectedRoute.tsx  TenantRegistration.css  TenantRegistration.tsx
frontend/src/components/Games/: GameCalendar.css  (+9 more)
frontend/src/contexts/: AuthContext.tsx  TenantContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/locales/: en.json
frontend/src/services/: assignmentService.ts  gameService.ts  playerService.ts  teamService.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  constants.ts
migrations/: init_db.py
migrations/versions/: .gitkeep  558e2dc041fe_add_admininvitation_model.py  56ae97798be8_add_default_player_requirements_to_.py  5a15d1fcb126_add_skill_rating_to_player_model.py  7196e0d98f72_enhance_invitation_tracking.py  7f325d227247_add_email_preferences_to_player_model.py  c6ab400c729c_add_team_number_to_assignments_for_team_.py  f67a63181d9b_add_invitations_sent_at_to_games_table.py
models/: __init__.py  admin_invitation.py  assignment.py  game.py  invitation.py  player.py  statistics.py  team.py  tenant.py  user.py
routes/: admin.py  assignments.py  auth.py  email_test.py  games.py  invitations.py  players.py  statistics.py  teams.py  tenant_onboarding.py  tenants.py
scripts/: setup-env.sh  validate-env.py
services/: invitation_service.py  team_assignment_service.py
templates/email/: game_invitation_en.html  game_invitation_fr.html
tests/: test_auth.py  test_tenant_isolation.py  test_tenant_onboarding.py  test_tenant_routing.py
utils/: auth.py  base_model.py  decorators.py  email_service.py  middleware.py  onboarding_helpers.py  query_filter.py  tenant.py  tenant_isolation.py
(+19 files in other folders)
