[project]
name = "hockey-pickup-manager"
version = "1.0.0"
description = "Multi-tenant SaaS application for managing hockey pickup games"
authors = [{name = "Hockey Pickup Manager Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
]
dependencies = [
    "Flask>=2.3",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Migrate>=4.0",
    "Flask-Login>=0.6",
    "Flask-Mail>=0.9",
    "Flask-WTF>=1.2",
    "Flask-Limiter>=3.5",
]
